Implemented GUI (DockerVPN.sh) and fixed some bugs. First fully functional prototype

--- a/install/setup.conf
+++ b/install/setup.conf
@@ -1,3 +1,4 @@
+# Certificate configurations
 CA_COUNTRY="DE"
 CA_PROVINCE="Germany"
 CA_CITY="Dortmund"
@@ -5,12 +6,18 @@ CA_ORG="MyOrg"
 CA_MAIL="max.mustermann@tu-dortmund.de"
 CA_OU="Community"
 
+# VPN configurations
 VPN_KEYSIZE=1024
 VPN_PROTO=udp
 VPN_PORT=1194
 VPN_DNS=DVPNHOST
 
-HOST_NAME=DVPNHOST
-
 LOGGING=true
 LOG_DIR=/var/log/openvpn.log
+
+# General configurations
+HOST_NAME=DVPNHOST
+
+# Docker configurations
+DOCKER_IMG_NAME=cavus/dvpn
+DOCKER_CONT_NAME=dvpn-container
